# Graphics-Final-Project

./: README.md
ModernCelt/: CMakeLists.txt
ModernCelt/project/: Building.cpp  Building.h  Character.cpp  Character.h  IrishPub.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  Tree.cpp  Tree.frag  Tree.h  Tree.vert  bot.frag  bot.vert  box.frag  box.vert  depth.frag  depth.vert  lab1_window.cpp  main.cpp  skybox.frag  skybox.vert  terrain.frag  terrain.vert
ModernCelt/project/models/bot/: praying .gltf  result.gltf  scene.gltf
ModernCelt/project/render/: shader.cpp  shader.h
